--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         color: #333;
         padding-bottom: 10px;
         border-bottom: 2px solid #000;
+        padding-left: 10px;
       }
 
       img {
         max-width: 80%;
         height: auto;
         margin-bottom: 10px;
+        padding-left: 10px;
         border: 2px solid #000;
       }
 
