media query added

--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
       .text-container26 {
         background-color: var(-color-26);
       }
+      /* 모바일 화면에서 이미지와 본문을 일렬로 표시 */
+      @media screen and (max-width: 768px) {
+        .container {
+          flex-direction: column;
+        }
+        #mainImage {
+          max-width: 100%;
+          max-height: auto;
+        }
+      }
     </style>
   </head>
   <body>
