media query add(remove margin)

--- a/index.html
+++ b/index.html
@@ -95,9 +95,6 @@
         --color-26: #f5ab3d;
         /* Define more border colors using --color-N pattern */
       }
-      .text-container1 {
-        background-color: var(-color-1);
-      }
 
       .text-container2 {
         background-color: var(-color-2);
@@ -206,6 +203,15 @@
         #mainImage {
           max-width: 100%;
           max-height: auto;
+        }
+        p {
+          font-size: 8px; /* 원하는 글자 크기로 변경하세요 */
+          padding-left: 2px;
+          padding-right: 2px;
+        }
+        h2 {
+          font-weight: bold;
+          font-size: 10px; /* 원하는 글자 크기로 변경하세요 */
         }
       }
     </style>
