--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           가슴이 내려앉다
         </h2>
         <div>
-          <div class="text-container2">
+          <div class="text-container2 text-contains">
             <p class="mean">몹시 놀라서 맥이 풀리다.</p>
             <p class="text">
               월요일 아침, 출근 준비를 마친 강한결 씨. 여느 때처럼 현관문을
@@ -70,7 +70,7 @@
           가슴이 천근만근 무겁다
         </h2>
         <div>
-          <div class="text-container3">
+          <div class="text-container3 text-contains">
             <p class="mean">
               무게가 천 근이나 만 근이 된다는 뜻으로, 무거운 마음을 비유적으로
               이르는 말.
@@ -98,7 +98,7 @@
           거북이 잔등의 털을 긁는다
         </h2>
         <div>
-          <div class="text-container4">
+          <div class="text-container4 text-contains">
             <p class="mean">
               아무리 찾아도 얻지 못할 곳에서 애써 구하려 하는 것처럼 어리석은
               행동을 이르는 말.
@@ -123,7 +123,7 @@
           공기가 팽팽하다
         </h2>
         <div>
-          <div class="text-container5">
+          <div class="text-container5 text-contains">
             <p class="mean">분위기가 몹시 긴장되어 있다.</p>
             <p class="text">
               신입 사원들은 특히 긴장을 많이 한다. 왜 안 그렇겠는가. 근무
@@ -140,7 +140,7 @@
           귀밖으로 듣다
         </h2>
         <div>
-          <div class="text-container6">
+          <div class="text-container6 text-contains">
             <p class="mean">
               남의 말을 성의 있게 듣지 않고 듣는 둥 마는 둥 하다.
             </p>
@@ -162,7 +162,7 @@
           귀에 못이 박히다
         </h2>
         <div>
-          <div class="text-container7">
+          <div class="text-container7 text-contains">
             <p class="mean">같은 말을 여러 번 들어 싫은 느낌이 들다.</p>
             <p class="text">
               1단계는 거리에서 전도대상자를 골라 대화를 시작한다. ‘안녕하세요,
@@ -190,7 +190,7 @@
           낙숫물이 댓돌을 뚫는다
         </h2>
         <div>
-          <div class="text-container8">
+          <div class="text-container8 text-contains">
             <p class="mean">
               작은 힘이지만 끈기 있게 계속하면 큰일을 이룰 수 있다.
             </p>
@@ -212,7 +212,7 @@
           낙타가 바늘 구멍에 들어가다
         </h2>
         <div>
-          <div class="text-container9">
+          <div class="text-container9 text-contains">
             <p class="mean">불가능한 일을 시도하다.</p>
             <p class="text">
               심리학에선 로또를 사는 이유에 대해 '통제의 환상(illusion of
@@ -241,7 +241,7 @@
           눈과 귀를 한데 모으다
         </h2>
         <div>
-          <div class="text-container10">
+          <div class="text-container10 text-contains">
             <p class="mean">눈길을 끌다.</p>
             <p class="text">
               휴대폰 통화시 목소리가 커지는 이유는 수화음이 너무 작기 때문이다.
@@ -273,7 +273,7 @@
           눈에 넣어도 아프지 않다
         </h2>
         <div>
-          <div class="text-container11">
+          <div class="text-container11 text-contains">
             <p class="mean">매우 귀여움을 나타내는 말.</p>
             <p class="text">
               <가정(家庭)> 박목월 <br />
@@ -295,7 +295,7 @@
           눈에 불을 켜다
         </h2>
         <div>
-          <div class="text-container12">
+          <div class="text-container12 text-contains">
             <p class="mean">몹시 욕심을 내거나 관심을 기울이다.</p>
             <p class="text">
               농경은 끔찍한 실수였다’ 설의 지지자인 저술가 재러드 다이아몬드가
@@ -316,7 +316,7 @@
           단 꿈을 꾸다
         </h2>
         <div>
-          <div class="text-container13">
+          <div class="text-container13 text-contains">
             <p class="mean">즐겁고 기분 좋은 꿈.</p>
             <p class="text">
               사랑에 실패해서든, 속절없이 먹어가는 나이 때문이든, 병 때문이든,
@@ -342,7 +342,7 @@
           땅 짚고 헤엄치다
         </h2>
         <div>
-          <div class="text-container14">
+          <div class="text-container14 text-contains">
             <p class="mean">무슨 일을 쉽게 할 수 있음을 이르는 말.</p>
             <p class="text">
               [인터뷰] 한국 문화와 관련 있지 않을까 싶은데요. 한국 문화 중
@@ -371,7 +371,7 @@
           산 입에 거미줄 치랴
         </h2>
         <div>
-          <div class="text-container15">
+          <div class="text-container15 text-contains">
             <p class="mean">아무리 어렵다 해도 먹고 살 것은 생기기 마련이다.</p>
             <p class="text">
               주중동에서 매일 출·퇴근한다는 김모씨(64)는 보기 드문 할머니였다.
@@ -400,7 +400,7 @@
           손이 발이 되다
         </h2>
         <div>
-          <div class="text-container16">
+          <div class="text-container16 text-contains">
             <p class="mean">
               허물이나 잘못을 용서하여 달라고 간절히 빎을 비유적으로 이르는 말.
             </p>
@@ -428,7 +428,7 @@
           얼굴이 두껍다
         </h2>
         <div>
-          <div class="text-container17">
+          <div class="text-container17 text-contains">
             <p class="mean">부끄러움을 모르고 염치가 없다.</p>
             <p class="text">
               그러나 지금의 가축 인간들은 저팔계만큼의 사랑스러움에도 크게 못
@@ -460,7 +460,7 @@
           업어가도 모르다
         </h2>
         <div>
-          <div class="text-container18">
+          <div class="text-container18 text-contains">
             <p class="mean">
               잠이 매우 깊게 들어 어떤 소리를 내거나 흔들어 깨워도 잘 일어나지
               않다.
@@ -489,7 +489,7 @@
           일각여삼추
         </h2>
         <div>
-          <div class="text-container19">
+          <div class="text-container19 text-contains">
             <p class="mean">
               일각은 15분을 말하고 여삼추는 세 번의 가을을 뜻하므로 3년을
               말한다. 잠깐 기다리는 시간이 마치 3년처럼 길게 느껴진다는 뜻.
@@ -516,7 +516,7 @@
           입방아를 찧다
         </h2>
         <div>
-          <div class="text-container20">
+          <div class="text-container20 text-contains">
             <p class="mean">말을 방정맞게 자꾸 하다</p>
             <p class="text">
               충격 경악 결국 멘붕 발칵 입이 쩍 헉! 폭소 무슨일 이럴수가 알고보니
@@ -534,7 +534,7 @@
           입에 곰팡이가 피다
         </h2>
         <div>
-          <div class="text-container21">
+          <div class="text-container21 text-contains">
             <p class="mean">입에 곰팡이가 필 만큼 말을 하지 않다</p>
             <p class="text">
               연구자들이 밝혀낸 결과는 다음과 같았다. 특히 고독감을 느끼는
@@ -557,7 +557,7 @@
           입이 귀에 걸리다
         </h2>
         <div>
-          <div class="text-container22">
+          <div class="text-container22 text-contains">
             <p class="mean">기분이 아주 좋다</p>
             <p class="text">
               팬들의 덕질의 원동력은 저마다 달랐지만, 덕질을 통해 활기를
@@ -586,7 +586,7 @@
           입추의 여지가 없다
         </h2>
         <div>
-          <div class="text-container23">
+          <div class="text-container23 text-contains">
             <p class="mean">
               입추란 송곳(錐)을 세운다(立)는 말이다. 송곳의 끝도 세울 수 없을
               정도로 많다는 뜻.
@@ -618,7 +618,7 @@
           파김치가 되다
         </h2>
         <div>
-          <div class="text-container24">
+          <div class="text-container24 text-contains">
             <p class="mean">몹시 지쳐서 기운이 아주 느른하게 되다.</p>
             <p class="text">
               속도감을 즐기게 된 아이는 친구들 없이도 신나게 자전거를 타며 땀을
@@ -642,7 +642,7 @@
           피땀흘리다
         </h2>
         <div>
-          <div class="text-container25">
+          <div class="text-container25 text-contains">
             <p class="mean">온갖 힘과 정성을 쏟아 노력하다.</p>
             <p class="text">
               그때부터 나는 건강에 대한 염려를 뒷전으로 하고 평소 먹던 대로
@@ -667,7 +667,7 @@
           하늘을 날 것 같다
         </h2>
         <div>
-          <div>
+          <div class="text-container26 text-contains">
             <p class="mean">매우 기쁘다</p>
             <p class="text">
               퇴사 인사 구성 퇴사 인사말 구성 예시<br />
